--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,13 @@
       <version>10.0.0-rc.6</version>
     </dependency>
 
+    <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.8.6</version>
+    </dependency>
+
+
 
     <!-- https://mvnrepository.com/artifact/com.sun.mail/javax.mail -->
     <dependency>
